<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar"/>

        <Button
            android:id="@+id/mainMenubtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="main"
            android:text="@string/Main" />

        <Button
            android:id="@+id/teamsbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="teams"
            android:text="@string/Teams" />

        <Button
            android:id="@+id/matchesbtn"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:onClick="matches"
            android:text="@string/Matches" />

        <Button
            android:id="@+id/load2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="interview"
            android:text="@string/Interview" />

        <Button
            android:id="@+id/open1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="survey"
            android:text="@string/Survey" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TeamName"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="45dp"
            android:hint="@string/teamtxt" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/RobotName"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="45dp"
            android:hint="@string/robottxt" />

        <Button
            android:id="@+id/saveInterview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:onClick="saveInterview"
            android:text="@string/saveInterviewbtn" />

        <Button
            android:id="@+id/loadInterview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:onClick="getInterview"
            android:text="@string/loadInterviewbtn" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LoadTeamName"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="45dp"
            android:hint="@string/teamtxt" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="45dp"
            android:background="@android:drawable/bottom_bar"
            android:gravity="center_vertical">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Accept" />

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Refuse" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>