<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/TeamName"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="45dp"
                android:hint="@string/teamtxt" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/RobotName"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="139dp"
                android:hint="@string/robottxt" />

            <Button
                android:id="@+id/saveInterview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:onClick="saveInterview"
                android:text="@string/saveInterviewbtn" />

            <Button
                android:id="@+id/loadInterview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:onClick="getInterview"
                android:text="@string/loadInterviewbtn" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/LoadTeamName"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="45dp"
                android:hint="@string/teamtxt" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="45dp"
                android:background="@android:drawable/bottom_bar"
                android:gravity="center_vertical">

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Accept" />

                <Button
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Refuse" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>