<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SurveyLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:visibility="visible"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.TheRedAlliance.AppBarOverlay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_insetEdge="top">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:toolbarId="@+id/toolbar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/Theme.TheRedAlliance.PopupOverlay" />

            <Button
                android:id="@+id/mainMenubtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="65dp"
                android:onClick="main"
                android:text="@string/Main" />

            <Button
                android:id="@+id/teamsbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="65dp"
                android:onClick="teams"
                android:text="@string/Teams" />

            <Button
                android:id="@+id/matchesbtn"
                android:layout_width="107dp"
                android:layout_height="49dp"
                android:layout_marginStart="260dp"
                android:layout_marginLeft="260dp"
                android:layout_marginTop="65dp"
                android:onClick="matches"
                android:text="@string/Matches" />

            <Button
                android:id="@+id/load2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="125dp"
                android:onClick="interview"
                android:text="@string/Interview" />

            <Button
                android:id="@+id/open1"
                android:layout_width="178dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="180dp"
                android:layout_marginLeft="180dp"
                android:layout_marginTop="125dp"
                android:onClick="survey"
                android:text="@string/Survey" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/NestedScroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#FFFFFF"
        android:fillViewport="true"
        app:layout_dodgeInsetEdges="top">

        <LinearLayout
            android:id="@+id/ScrollContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>